build: upgrade to java 17